# django-vite-boilerplate

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  pytest.ini  requirements-dev.txt
.github/workflows/: test.yml
django_vite_boilerplate/frontend_template/: cookiecutter.json
django_vite_boilerplate/frontend_template/{{cookiecutter.project_slug}}/: package.json
django_vite_boilerplate/frontend_template/{{cookiecutter.project_slug}}/application/: app.js
docs/: requirements.txt
docs/source/: conf.py  index.rst  install.md
tests/: __init__.py  conftest.py  test_cookiecutter.py
