[tool.poetry]
name = "django-vite-boilerplate"
version = "0.1.0"
description = "A Django + Vite boilerplate for rapid development"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "django_vite_boilerplate"}]
keywords = ["django", "vite", "boilerplate", "starter"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.urls]
Homepage = "https://github.com/yourusername/django-vite-boilerplate"
Documentation = "https://github.com/yourusername/django-vite-boilerplate#readme"
Repository = "https://github.com/yourusername/django-vite-boilerplate"

[tool.black]
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.pytest_cache
    | \.tox
    | \.venv
    | venv
    | fixtures
    | static
    | staticfiles
    | templates
    | migrations     # also separately exclude django migrations folder in apps
  )/
)
'''

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
